syntax = "proto3";

package NFMsg;

message ProxyCmdMessage
{
	string cmd_name = 1;
}

message UserLoginTokenLoginUserPmd_C
{
	uint32 version = 1;
	uint32 gameid = 2;
	uint32 zoneid = 3;
	uint64 accountid = 4;
	uint32 logintempid = 5;
	uint64 timestamp = 6;
	string compress = 7;
	string tokenmd5 = 8;
}

message UserJsMessageForwardUserPmd_CS
{
	string cmd_name = 1;
	string msg = 2;
}

message AccountConnectGameServer_C
{
	uint64 uid = 1;
	string ip = 2;
	string account = 3;
}

message UserLoginReconnectLoginUserPmd_C
{
	uint64 accountid = 1;
	uint64 timestamp = 2;
	string tokenmd5 = 3;
	uint32 logintempid = 4;
	uint32 gameid = 5;
	uint32 zoneid = 6;
	uint32 lastseq = 7;
	string url = 9;
}